# jpbc

./: .gitignore  README.md  benchmark.html  buildHowto.html  contact.html  dependencies.html  download.html  faq.html  index.html  jpbc.xml  license.html  pom.xml  project-info.html  source-repository.html  team-list.html  who.html
docs/: android.html  ecpg.html  element.html  field.html  mmpg.html  pairing.html  pbcwrapper.html  pg.html
jpbc-android/: AndroidManifest.xml  pom_1.xml
jpbc-android/res/layout/: main.xml
jpbc-api/: pom.xml
jpbc-benchmark/: pom.xml
jpbc-crypto/: pom.xml
jpbc-mm/: pom.xml
jpbc-pbc/: CMakeLists.txt  FindGMP.cmake  FindPBC.cmake  pom.xml
jpbc-pbc/src/main/c/: gmp_wrapper.c  pbc_wrapper.c  pbc_wrapper.h
jpbc-pbc/src/main/java/it/unisa/dia/gas/plaf/jpbc/gmp/jna/: GMPLibrary.java  GMPProvider.java
jpbc-pbc/src/main/java/it/unisa/dia/gas/plaf/jpbc/pbc/: ImmutablePBCCurvePointElement.java  ImmutablePBCElement.java  PBCCurvePointElement.java  PBCElement.java  PBCElementPowPreProcessing.java  PBCField.java  PBCPairing.java  PBCPairingFactory.java
jpbc-pbc/src/main/java/it/unisa/dia/gas/plaf/jpbc/pbc/curve/: PBCCurveGenerator.java  PBCTypeA1CurveGenerator.java  PBCTypeACurveGenerator.java  PBCTypeDCurveGenerator.java  PBCTypeECurveGenerator.java  PBCTypeFCurveGenerator.java  PBCTypeGCurveGenerator.java
jpbc-pbc/src/main/java/it/unisa/dia/gas/plaf/jpbc/pbc/field/: PBCFieldFromElement.java  PBCG1Field.java  PBCG2Field.java  PBCGTField.java  PBCZrField.java
jpbc-pbc/src/main/java/it/unisa/dia/gas/plaf/jpbc/wrapper/jna/: MPZElementType.java  PBCElementPPType.java  PBCElementType.java  PBCPairingPPType.java  PBCPairingType.java  WrapperLibrary.java  WrapperLibraryInfo.java  WrapperLibraryProvider.java
jpbc-pbc/src/test/java/it/unisa/dia/gas/plaf/jpbc/wrapper/jna/: WrapperLibraryTest.java
jpbc-site-skin/: pom.xml
jpbc-test/: pom.xml
schemes/: abe_gghsw13.html  abe_gghvv13.html  ahibe_dip10.html  hve_ip08.html  ibs_ps06.html  ip_lostw10.html  kem.html  rl_w12.html  schemes.html  ss_bls01.html  uhibe_lw11.html
src/main/assembly/: jpbc-distro.xml  jpbc-site.xml
src/site/: site.xml
src/site/xdoc/: benchmark.xml  contact.xml  (+5 more)
(+239 files in other folders)
